[package]
name = "naronbenh-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
async-proto = "0.16.10"
clap = { version = "4.4.11", features = ["derive"] }
image = { version = "0.24.7", default-features = false, features = ["png"] }
naronbenh = { path = "../naronbenh" }
rayon = "1.8.0"
wheel = { git = "https://github.com/fenhl/wheel", branch = "main" }
