[package]
name = "naronbenh"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
chrono = { version = "0.4.31", default-features = false, features = ["clock", "std"] }
image = { version = "0.24.7", default-features = false }
rayon = "1.8.0"
